--- a/workout-tracker/views/partials/footer.ejs
+++ b/workout-tracker/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
   <div class="bg-dark text-white py-3">
-    <p class="text-center mb-0">© 2024 Workout Tracker. All rights reserved.</p>
+    <p class="text-center mb-0">© 2024 Workout Tracker By, Mo. AK. All rights reserved.</p>
   </div>
 </footer>
