--- a/workout-tracker/views/partials/footer.ejs
+++ b/workout-tracker/views/partials/footer.ejs
@@ -1,3 +1,4 @@
+<!-- views/partials/footer.ejs -->
 <footer>
   <div class="bg-dark text-white py-3">
     <p class="text-center mb-0">© 2024 Workout Tracker By, Mo. AK. All rights reserved.</p>
